@@ -19,6 +19,7 @@ Release 0.20.3 - Unreleased
               (Jeremiah Jacquet via Stack)
    HBASE-1987 The Put object has no simple read methods for checking what
               has already been added (Ryan Smith via Stack)
+   HBASE-2009 [EC2] Support mapreduce
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
